complete responsive layout

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nft-preview-card-yensan",
+  "author": "https://www.linkedin.com/in/yen-san-443429187/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
